<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:background="@color/white">

    <!-- Background ImageView with updated margins -->

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="306dp"
        android:layout_height="338dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/alarmrunner" />

    <TextView
        android:id="@+id/captionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/income_task"
        android:textColor="@color/softblue"
        android:textSize="28sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/taskCard"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/lightgrey"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/taskTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/task_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taskContentText"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:text="@string/task_content"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/dismissButton"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"

                android:padding="12dp"
                android:text="@string/Dismiss"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/grey_chetu"
                app:cornerRadius="0dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
