<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Tasks"
        android:textColor="@color/softblue"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:nestedScrollingEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flotbuttton"
        android:layout_width="55dp"
        android:layout_height="51dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/light_blue"
        android:contentDescription="@string/enter_task"
        android:src="@drawable/baseline_add_24"
        android:tint="@color/white"
        android:translationZ="8dp"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/lightgrey"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/calenderButton"
                android:layout_width="61dp"
                android:layout_height="42dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="50dp"
                android:contentDescription="@string/calendar"
                android:src="@drawable/baseline_calendar_month_24"
                app:tint="@color/softblue" />

            <ImageView
                android:id="@+id/uptaskButton"
                android:layout_width="61dp"
                android:layout_height="42dp"
                android:layout_marginEnd="50dp"
                android:contentDescription="@string/Tasks"
                android:src="@drawable/baseline_task_24"
                app:tint="@color/softblue" />

            <ImageView
                android:id="@+id/focusButton"
                android:layout_width="61dp"
                android:layout_height="42dp"
                android:contentDescription="@string/focus"
                android:src="@drawable/baseline_compost_24"
                app:tint="@color/softblue" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
